Second attempt to fix navbar for horizontal scrolling.

--- a/css/style.css
+++ b/css/style.css
@@ -826,6 +826,7 @@
 	}
 
 	#bootstrapOverrides .projects .navbar{
+		position: relative;
 		margin: 0 auto;
 	}
 
